[package]
name = "helios-proof-relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
], default-features = false }
serde = { version = "1.0.219", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }
hex = { version = "0.4", default-features = false }
anyhow = { version = "1.0.83", default-features = false }
borsh = { version = "1.5.5", features = ["derive"], default-features = false }
reqwest = { version = "0.11", features = ["json"], default-features = false }
sp1-sdk = { version = "5.0.0", features = ["native-gnark"] }
rusqlite = "=0.28.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

tendermint-recursion-types = { git = "https://github.com/timewave-computer/lightwave" }
helios-recursion-types = { git = "https://github.com/timewave-computer/lightwave" }

[features]
default = ["health-check"]
relayer = []
health-check = []

[dev-dependencies]
tempfile = "3.8"
